[metadata]
name = chained_hashing
version = 0.0.0
description = Chained Hashing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xsc27/chained-hashing
author = Carlos Meza
author_email = carlos@digitalr00ts.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    xsc27
    digitalr00ts
    digitalroots
    carlos meza
project_url =
    Source = https://github.com/xsc27/chained-hashing
    Tracker = https://github.com/xsc27/chained-hashing/issues/

[options]
packages = find:
python_requires = >=3.9
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    chcli = chained_hashing.cli:run

[options.extras_require]
docs =
    mdx-truly-sane-lists
    mkdocs-exclude
    mkdocs-gen-files
    mkdocs-jupyter
    mkdocs-literate-nav
    mkdocs-material~=8.0
    mkdocs-minify-plugin
    mkdocs-redirects
    mkdocs-section-index
    mkdocstrings
lint =
    dlint
    flake8<4  # https://github.com/flakehell/flakehell/issues/22
    flake8-bandit
    flake8-bugbear
    flake8-comprehensions
    flake8-debugger
    flake8-docstrings
    flake8-eradicate
    flake8-isort
    flake8-pytest-style
    flake8-rst-docstrings
    flakehell
    pep8-naming
    pre-commit
    pydocstyle[toml]
    pylint
    pytest
test =
    coverage[toml]
    pytest-cov
